--- a/templates/item/burden/header.hbs
+++ b/templates/item/burden/header.hbs
@@ -2,7 +2,32 @@
   <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' data-tooltip='{{item.name}}' />
   <div class='header-fields mt-10'>
     <div class='document-name'>
-      <input name='name' class="resource-label" type='text' value='{{item.name}}' placeholder='Name' />
+      <div class="flexrow flex-between">
+        <input name='name' class="resource-label flexultra" type='text' value='{{item.name}}' placeholder='Name' />
+      </div>
+    </div>
+    <div class="grid grid-2col">
+      <div class='resource mr-10'>
+        <label class='resource-label'>{{localize 'SDM.Burden.StepsToCure'}}
+          <input type='text' name='system.cure_steps.required' value='{{system.cure_steps.required}}' data-dtype='Number' />
+        </label>
+      </div>
+
+      <div class='resource flex-group-center'>
+        {{#if (gt system.cure_steps.required 0)}}
+        <label class='resource-label'>{{localize 'SDM.Burden.CompletedSteps'}}</label>
+        <div class="resource-content sources flex-group-center mt-5">
+          {{#multiboxes system.cure_steps.completed}}
+            <input type="radio" id="completed-{{item.id}}-0" name="system.cure_steps.completed" value="0" checked="checked" data-dtype='Radio' style="cursor:pointer;">
+            {{#times_from 1 system.cure_steps.required}}
+              <input type="radio" id="completed-{{../item.id}}-{{this}}" name="system.cure_steps.completed" value="{{this}}" data-dtype='Radio' style="cursor:pointer;">
+              <label class="radio-toggle" data-action="radioToggle" for="completed-{{../item.id}}-{{this}}" style="cursor:pointer;" data-tooltip="{{this}}"></label>
+            {{/times_from}}
+          {{/multiboxes}}
+        </div>
+        {{/if}}
+      </div>
     </div>
   </div>
 </header>
+
