--- a/templates/item/description.hbs
+++ b/templates/item/description.hbs
@@ -7,8 +7,12 @@
         {{#each system.features}}
         <li class="pill transparent">
           <span data-tooltip aria-label="{{localize (concat 'SDM.ItemFeature.' this 'Description')}}">
-            {{localize (concat 'SDM.ItemFeature.' this 'Abbr')}}
-            {{ifThen (eq this 'replenish') ../system.replenish.value  ''}}
+            {{#if (numberedFeature this)}}
+              {{replace (localize (concat 'SDM.ItemFeature.' this 'Abbr')) ' #'}}
+            {{else}}
+              {{localize (concat 'SDM.ItemFeature.' this 'Abbr')}}
+            {{/if}}
+            {{ifThen (numberedFeature this) (lookup (lookup ../system this) 'value')  ''}}
           </span>
         </li>
         {{/each}}
