feat: :sparkles: Finish updating new item types sheet

--- a/css/sdm.css
+++ b/css/sdm.css
@@ -368,7 +368,7 @@
 
 .features-label {
   font-weight: bold;
-  padding-top: 2px;
+  margin-right: 5px;
   font-family: var(--sdm-font-primary);
 }
 
