--- a/templates/item/description.hbs
+++ b/templates/item/description.hbs
@@ -1,8 +1,8 @@
 {{! Description Tab }}
 <section class='tab scrollable {{tab.cssClass}}' data-group='primary' data-tab='description'>
   {{#if system.features.size}}
-    <div class="flex mt-5" style="align-items: center">
-      <span class="features-label">{{localize 'SDM.ItemTabFeatures'}}:&nbsp;</span>
+    <div class="flex mt-5">
+      <span class="features-label">{{localize 'SDM.ItemTabFeatures'}}:</span>
       <ul class="card-footer pills unlist">
         {{#each system.features}}
         <li class="pill transparent">
