--- a/templates/item/burden/header.hbs
+++ b/templates/item/burden/header.hbs
@@ -30,4 +30,23 @@
     </div>
   </div>
 </header>
+<header>
+  <div class="">
+    <div class="grid grid-3col">
+
+      <div class="resource">
+        <label class='resource-label'>{{localize 'SDM.ItemBurdenType'}}</label>
+        <select name='system.type' class="resource-content">
+          {{selectOptions @root.config.burdenType blank='TYPE.Burden' localize=true selected=system.type sort=true}}
+        </select>
+      </div>
+
+      {{#if (eq item.system.type 'power')}}
+      {{!-- fragment --}}
+      {{> ($$ "item/power") item=item abilities=@root.abilities}}
+      {{!-- fragment --}}
+      {{/if}}
+    </div>
+  </div>
+</header>
 
