--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -294,7 +294,7 @@
   ul.links {
     gap: 0;
     margin-top: 6px;
-
+    font-family: var(--sdm-font-tab);
     li:not(:last-child)::after {
       content: ' • ';
       margin-inline: 3px;
@@ -333,6 +333,7 @@
   .system-info {
     position: relative;
     font-size: var(--font-size-16);
+    font-family: var(--sdm-font-primary);
     i {
       padding-inline-start: 2px;
       font-size: var(--font-size-12);
@@ -457,6 +458,23 @@ input[type='radio']::after {
     object-fit: fill;
 
     /* you choose the visible color now */
+    background-color: var(--sdm-scrollbar-thumb);
+  }
+
+  .sdm-pause {
+    height: 120px;
+    width: 120px;
+    -webkit-mask-image: url('../assets/sdm-pause.png');
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    -webkit-mask-size: contain;
+
+    mask-image: url('../assets/sdm-pause.png');
+    mask-repeat: no-repeat;
+    mask-position: center;
+    mask-size: contain;
+    object-fit: fill;
+
     background-color: var(--sdm-scrollbar-thumb);
   }
 
@@ -1093,6 +1111,11 @@ input[type='radio']::after {
     padding: 8px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 4px;
+  }
+
+  #settings > * > h4.divider {
+    font-family: var(--sdm-font-primary);
+    font-size: 18px;
   }
 
   .theme-dark select option {
