--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -37,7 +37,7 @@
     }
   }
 
-  /* Hide the browser's default checkbox */
+  // Hide the browser's default checkbox
   input {
     display: none;
 
