--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -332,12 +332,17 @@
 
   .system-info {
     position: relative;
-    font-size: var(--font-size-16);
+    font-size: var(--font-size-18);
     font-family: var(--sdm-font-primary);
     i {
       padding-inline-start: 2px;
       font-size: var(--font-size-12);
     }
+  }
+
+  .system-mote {
+    font-size: var(--font-size-13);
+    font-family: var(--sdm-font-dice);
   }
 }
 
@@ -446,7 +451,10 @@ input[type='radio']::after {
     font-family: var(--sdm-font-secondary);
   }
 
-  span.fumble, span.critical, span.force, span.lucky {
+  span.fumble,
+  span.critical,
+  span.force,
+  span.lucky {
     font-family: var(--sdm-font-dice);
   }
 
@@ -494,8 +502,8 @@ input[type='radio']::after {
   }
 
   .sdm-icon {
-    width: 250px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
 
     -webkit-mask-image: url('../assets/sdm-pause.png');
     -webkit-mask-repeat: no-repeat;
@@ -578,8 +586,7 @@ input[type='radio']::after {
         overflow: hidden;
 
         // Immediate children vert margins
-         *
-        > * {
+        * > * {
           margin-block: 0;
         }
       }
